syntax = "proto3";

package info.maaskant.wmsnotes.server.command.grpc;

service CommandService {
    rpc PostCommand (PostCommandRequest) returns (PostCommandResponse);
}

message PostCommandRequest {
    // The id of the note to which the command applies
    string note_id = 1;

    // The last known revision of the note
    int32 last_revision = 2;

    oneof command {
        CreateNoteCommand create_note = 10;
        DeleteNoteCommand delete_note = 11;
        UndeleteNoteCommand undelete_note = 12;
        AddAttachmentCommand add_attachment = 13;
        DeleteAttachmentCommand delete_attachment = 14;
        ChangeContentCommand change_content = 15;
        ChangeTitleCommand change_title = 16;
    }

    message CreateNoteCommand {
        string title = 1;
    }

    message DeleteNoteCommand {
    }

    message UndeleteNoteCommand {
    }

    message AddAttachmentCommand {
        string name = 1;
        bytes content = 2;
    }

    message DeleteAttachmentCommand {
        string name = 1;
    }

    message ChangeContentCommand {
        string content = 1;
    }

    message ChangeTitleCommand {
        string title = 1;
    }
}


message PostCommandResponse {
    enum Status {
        SUCCESS = 0;
        INTERNAL_ERROR = 1;
        BAD_REQUEST = 2;
    }
    Status status = 1;
    string errorDescription = 2;
    int32 new_event_id = 3;
    int32 new_revision = 4;
}